Update Java and Gradle requirements